--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,19 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"No tests yet\" && exit 0"
+    "test": "echo \"No tests yet\" && exit 0",
+    "ingest:gtfs": "ts-node src/gtfs/ingestStatic.ts"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "csv-parser": "^3.2.0",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.13",
+    "@types/unzipper": "^0.10.11",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
