--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,13 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"No tests yet\" && exit 0",
-    "ingest:gtfs": "ts-node src/gtfs/ingestStatic.ts"
+    "ingest:gtfs": "ts-node src/gtfs/ingestStatic.ts",
+    "ingest:gtfs-rt": "ts-node src/gtfs/ingestRealtime.ts"
   },
   "dependencies": {
     "csv-parser": "^3.2.0",
     "express": "^4.18.2",
+    "gtfs-realtime-bindings": "^1.1.1",
     "node-fetch": "^3.3.2",
     "unzipper": "^0.12.3"
   },
