--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"No tests yet\" && exit 0",
+    "test": "jest",
     "ingest:gtfs": "ts-node src/gtfs/ingestStatic.ts",
     "ingest:gtfs-rt": "ts-node src/gtfs/ingestRealtime.ts"
   },
@@ -18,10 +18,23 @@
     "unzipper": "^0.12.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node-fetch": "^2.6.13",
+    "@types/supertest": "^6.0.3",
     "@types/unzipper": "^0.10.11",
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/*.test.ts"
+    ]
   }
 }
