--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,14 @@
     "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
+    "i18next": "^25.4.1",
+    "leaflet": "^1.9.4",
     "next": "^14.2.0",
+    "next-i18next": "^15.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^15.7.2",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
