--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,23 @@
     "start": "node dist/index.js",
     "test": "jest",
     "ingest:gtfs": "ts-node src/gtfs/ingestStatic.ts",
-    "ingest:gtfs-rt": "ts-node src/gtfs/ingestRealtime.ts"
+    "ingest:gtfs-rt": "ts-node src/gtfs/ingestRealtime.ts",
+    "migrate": "ts-node src/migrate.ts"
   },
   "dependencies": {
     "csv-parser": "^3.2.0",
     "express": "^4.18.2",
     "gtfs-realtime-bindings": "^1.1.1",
     "node-fetch": "^3.3.2",
+    "pg": "^8.16.3",
+    "redis": "^5.8.2",
     "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node-fetch": "^2.6.13",
+    "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
     "@types/unzipper": "^0.10.11",
     "jest": "^30.0.5",
